Custom ScrollBar deleted && Display svg size fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -75,19 +75,6 @@
   height: 100%;
 }
 
-.frame__inner::-webkit-scrollbar {
-  width: 8px;
-  background: transparent;
-  background-color: #00000015;
-}
-
-.frame__inner::-webkit-scrollbar-thumb {
-  background-color: #00000033;
-  width: 8px;
-  border: 1px solid #EAEAEA;
-  border-radius: 20px;
-}
-
 .header {
   position: relative;
   background: linear-gradient(to bottom, var(--green-500), var(--green-700));
@@ -187,10 +174,6 @@
   border-radius: var(--border-radius-full);
   background-color: var(--green-500);
   box-shadow: var(--box-shadow-lg);
-}
-
-.explainit__launcher svg {
-  width: 20px;
 }
 
 .stack {
@@ -309,6 +292,10 @@
     height: 50px;
     margin-bottom: 14px;
     margin-right: 14px;
+  }
+
+  .explainit__launcher svg {
+    width: 20px;
   }
 
   .explainit__frame {
